<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:background="@color/white"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="26.5dp"
        android:paddingBottom="26.5dp"
        android:paddingLeft="25dp">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/use_information"
            android:textColor="@color/black"
            android:gravity="center"
            android:textSize="20dp"
            android:textStyle="bold"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"/>
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/before_btn"
            android:layout_centerVertical="true"/>
    </RelativeLayout>

    <ScrollView
        android:scrollbars="none"
        android:layout_marginLeft="24dp"
        android:layout_marginRight="24dp"
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_marginTop="40dp"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_marginBottom="16dp"
                android:text="@string/info_1"
                android:textSize="@dimen/M16"
                android:textColor="@color/black.800"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
            <TextView
                android:text="@string/info_1_1"
                android:layout_width="match_parent"
                android:textSize="@dimen/R14"
                android:textColor="@color/black.400"
                android:breakStrategy="simple"
                android:layout_height="wrap_content"/>


            <TextView
                android:layout_marginTop="40dp"
                android:layout_marginBottom="16dp"
                android:text="@string/info_2"
                android:textSize="@dimen/M16"
                android:textColor="@color/black.800"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
            <TextView
                android:text="@string/info_2_1"
                android:layout_width="match_parent"
                android:textSize="@dimen/R14"
                android:textColor="@color/black.400"
                android:breakStrategy="simple"
                android:layout_height="wrap_content"/>
            <TextView
                android:text="@string/info_2_2"
                android:layout_width="match_parent"
                android:textSize="@dimen/R14"
                android:textColor="@color/black.400"
                android:breakStrategy="simple"
                android:layout_height="wrap_content"/>
            <TextView
                android:text="@string/info_2_3"
                android:layout_width="match_parent"
                android:textSize="@dimen/R14"
                android:textColor="@color/black.400"
                android:breakStrategy="simple"
                android:layout_height="wrap_content"/>
            <TextView
                android:text="@string/info_2_4"
                android:layout_width="match_parent"
                android:textSize="@dimen/R14"
                android:textColor="@color/black.400"
                android:breakStrategy="simple"
                android:layout_height="wrap_content"/>



            <TextView
                android:layout_marginTop="40dp"
                android:layout_marginBottom="16dp"
                android:text="@string/info_3"
                android:textSize="@dimen/M16"
                android:textColor="@color/black.800"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
            <TextView
                android:text="@string/info_3_1"
                android:layout_width="match_parent"
                android:textSize="@dimen/M14"
                android:textColor="@color/black.600"
                android:breakStrategy="simple"
                android:layout_height="wrap_content"/>
            <TextView
                android:text="@string/info_3_1_1"
                android:layout_width="match_parent"
                android:textSize="@dimen/M14"
                android:textColor="@color/black.400"
                android:breakStrategy="simple"
                android:layout_height="wrap_content"/>

            <TextView
                android:layout_marginTop="16dp"
                android:text="@string/info_3_2"
                android:layout_width="match_parent"
                android:textSize="@dimen/M14"
                android:textColor="@color/black.600"
                android:breakStrategy="simple"
                android:layout_height="wrap_content"/>
            <TextView
                android:text="@string/info_3_2_1"
                android:layout_width="match_parent"
                android:textSize="@dimen/M14"
                android:textColor="@color/black.400"
                android:breakStrategy="simple"
                android:layout_height="wrap_content"/>

            <TextView
                android:layout_marginTop="16dp"
                android:text="@string/info_3_3"
                android:layout_width="match_parent"
                android:textSize="@dimen/M14"
                android:textColor="@color/black.600"
                android:breakStrategy="simple"
                android:layout_height="wrap_content"/>
            <TextView
                android:text="@string/info_3_3_1"
                android:layout_width="match_parent"
                android:textSize="@dimen/M14"
                android:textColor="@color/black.400"
                android:breakStrategy="simple"
                android:layout_height="wrap_content"/>

            <TextView
                android:layout_marginTop="16dp"
                android:text="@string/info_3_4"
                android:layout_width="match_parent"
                android:textSize="@dimen/M14"
                android:textColor="@color/black.600"
                android:breakStrategy="simple"
                android:layout_height="wrap_content"/>
            <TextView
                android:text="@string/info_3_4_1"
                android:layout_width="match_parent"
                android:textSize="@dimen/M14"
                android:textColor="@color/black.400"
                android:breakStrategy="simple"
                android:layout_height="wrap_content"/>

            <TextView
                android:layout_marginTop="16dp"
                android:text="@string/info_3_5"
                android:layout_width="match_parent"
                android:textSize="@dimen/M14"
                android:textColor="@color/black.600"
                android:breakStrategy="simple"
                android:layout_height="wrap_content"/>
            <TextView
                android:text="@string/info_3_5_1"
                android:layout_width="match_parent"
                android:textSize="@dimen/M14"
                android:textColor="@color/black.400"
                android:breakStrategy="simple"
                android:layout_height="wrap_content"/>

            <TextView
                android:layout_marginTop="16dp"
                android:text="@string/info_3_6"
                android:layout_width="match_parent"
                android:textSize="@dimen/M14"
                android:textColor="@color/black.600"
                android:breakStrategy="simple"
                android:layout_height="wrap_content"/>
            <TextView
                android:layout_marginBottom="60dp"
                android:text="@string/info_3_6_1"
                android:layout_width="match_parent"
                android:textSize="@dimen/M14"
                android:textColor="@color/black.400"
                android:breakStrategy="simple"
                android:layout_height="wrap_content"/>
        </LinearLayout>


    </ScrollView>
</LinearLayout>