<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:background="@color/white"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="312dp"
    android:layout_height="480dp"
    android:orientation="vertical"
    android:paddingLeft="10dp"
    android:paddingRight="10dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <LinearLayout
        android:layout_marginTop="25dp"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:fontFamily="@font/notosanskr_medium"
            android:textSize="@dimen/M18"
            android:layout_weight="1"
            android:text="필터"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <ImageButton
            android:layout_gravity="center"
            android:src="@drawable/cancel"
            android:background="@color/white"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </LinearLayout>

    <ScrollView
        android:scrollbars="none"
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent">
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="0dp">

            <android.widget.Button
                android:text="@string/gradeItem1"
                android:gravity="center_vertical"
                android:layout_marginBottom="10dp"
                android:paddingLeft="20dp"
                android:background="@drawable/bg_white_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
            <android.widget.Button
                android:text="@string/gradeItem2"
                android:gravity="center_vertical"
                android:layout_marginBottom="10dp"
                android:paddingLeft="20dp"
                android:background="@drawable/bg_white_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
            <android.widget.Button
                android:text="@string/gradeItem3"
                android:gravity="center_vertical"
                android:layout_marginBottom="10dp"
                android:paddingLeft="20dp"
                android:background="@drawable/bg_white_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
            <android.widget.Button
                android:text="@string/gradeItem4"
                android:gravity="center_vertical"
                android:layout_marginBottom="10dp"
                android:paddingLeft="20dp"
                android:background="@drawable/bg_white_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
            <android.widget.Button
                android:text="@string/gradeItem5"
                android:gravity="center_vertical"
                android:layout_marginBottom="10dp"
                android:paddingLeft="20dp"
                android:background="@drawable/bg_white_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
            <android.widget.Button
                android:text="@string/gradeItem6"
                android:gravity="center_vertical"
                android:layout_marginBottom="10dp"
                android:paddingLeft="20dp"
                android:background="@drawable/bg_white_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>



    </LinearLayout>
    </ScrollView>

    <View
        android:background="@drawable/shadow"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_gravity="bottom">
    </View>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="90dp"
        android:orientation="horizontal"
        tools:ignore="MissingConstraints">

        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <android.widget.Button
            android:text="확인"
            android:background="@drawable/bg_green_view"
            android:layout_gravity="center"
            android:textColor="@color/white"
            android:textSize="@dimen/M16"
            android:layout_width="70dp"
            android:layout_height="42dp"/>
    </LinearLayout>

</LinearLayout>